--- a/style.css
+++ b/style.css
@@ -3,41 +3,41 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-  }
-  
-  .container {
+}
+
+.container {
     width: 1300px;
     margin: 0 auto;
-  }
-  
-  header {
+}
+
+header {
     height: 65px;
     box-shadow: 0 0 10px 3px #bababa;
-  }
-  
-  header nav {
+}
+
+header nav {
     display: flex;
     align-items: center;
     height: 100%;
     justify-content: space-between;
-  }
-  
-  .header-list {
+}
+
+.header-list {
     display: flex;
     gap: 40px;
     align-items: center;
-  }
-  
-  .header-item {
+}
+
+.header-item {
     list-style: none;
     font-size: 18px;
-  }
-  
-  .logo {
+}
+
+.logo {
     width: 60px;
-  }
-  
-  .header-btn {
+}
+
+.header-btn {
     color: white;
     background: #00bafc;
     width: Hug (159px) px;
@@ -49,32 +49,32 @@
     border-radius: 7px;
     border: none;
     font-size: 18px;
-  }
-  
-  /* HERO-STYLES */
-  .hero {
+}
+
+/* HERO-STYLES */
+.hero {
     margin: 100px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .hero-info {
+}
+
+.hero-info {
     width: 650px;
-  }
-  
-  .hero-info h1 {
+}
+
+.hero-info h1 {
     font-size: 40px;
-  }
-  
-  .hero-info p {
+}
+
+.hero-info p {
     font-weight: 400;
     font-size: 19px;
     line-height: 30px;
     margin: 20px 0;
-  }
-  
-  .hero-btn {
+}
+
+.hero-btn {
     color: white;
     background: #00bafc;
     width: Hug (232px) px;
@@ -87,23 +87,23 @@
     border: none;
     font-size: 18px;
     cursor: pointer;
-  }
-  
-  .services {
+}
+
+.services {
     margin: 30px 0;
-  }
-  
-  .services-info {
+}
+
+.services-info {
     text-align: center;
-  }
-  
-  .services-subtitle {
+}
+
+.services-subtitle {
     width: 700px;
     margin: 30px auto;
     font-size: 18px;
-  }
-  
-  .services-item {
+}
+
+.services-item {
     gap: 15px;
     padding: 24px;
     list-style: none;
@@ -112,26 +112,26 @@
     box-shadow: 0 0 8px 3px #0000001A;
     display: flex;
     flex-direction: column;
-  }
-  
-  .services-list {
+}
+
+.services-list {
     gap: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
-  }
-  
-  .services-item img {
+}
+
+.services-item img {
     width: 200px;
     margin: 0 auto;
-  }
-  
-  .services-item__title {
+}
+
+.services-item__title {
     font-size: 18px;
-  }
-  
-  .services-btn {
+}
+
+.services-btn {
     color: white;
     background: #00bafc;
     width: Hug (159px) px;
@@ -143,30 +143,124 @@
     border-radius: 7px;
     border: none;
     font-size: 18px;
-  }
-  
-  .btn-group {
+}
+
+.btn-group {
     display: flex;
     justify-content: center;
     margin: 30px 0;
     align-items: center;
     gap: 15px;
-  }
-  
-  .services-link {
+}
+
+.services-link {
     font-size: 18px;
     color: #00BAFC;
-  }
-  .work {
+}
+
+.work {
     margin: 55px 0;
-  }
-  .work-info {
+}
+
+.work-info {
     text-align: center;
     width: 65%;
     margin: 0 auto;
-  }
-  .work-item {
+}
+
+.work-item {
     display: flex;
+    width: 80%;
+    margin: 0 auto;
     justify-content: space-around;
     align-items: center;
-  }
+}
+
+.contact {
+    background: #00BAFC;
+    padding: 56px 100px 56px 100px;
+    gap: 16px;
+    color: white;
+}
+
+.contact-info {
+    text-align: center;
+    width: 65%;
+    margin: 0 auto;
+}
+
+.contact-title {
+    font-size: 35px;
+}
+
+.contact-subtitle {
+    margin: 20px 0;
+}
+
+.contact-form {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 24px;
+    gap: 25px;
+    border-radius: 5px;
+    margin: 0 auto;
+    background: #FFFFFF;
+}
+
+.contact-btn {
+    width: 60%;
+    margin: 0 auto;
+    background: #00bafc;
+    padding: 8px 16px 8px 16px;
+    border-radius: 7px;
+    border: none;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+}
+
+input {
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+    height: 45px;
+    font-size: 17px;
+    padding: 0 0 0 10px;
+}
+
+input::placeholder {
+    color: black;
+}
+
+/* footer-styles */
+.footer {
+    background: #191919;
+    padding: 70px 0;
+    color: white;
+}
+.footer .container {
+    display: flex;
+    gap: 40px;
+}
+.footer-item {
+    width: 25%;
+    gap: 15px;
+    display: flex;
+    flex-direction:  column;
+}
+.footer-link {
+    font-size: 18px;
+}
+.footer-item svg {
+    width: 30px;
+}
+.footer-item li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 23px;
+}
+.footer-item__sbutitle {
+    line-height: 24px;
+}
